Updateds based on Jinto Recommendation
